# ClarkPlayer

./: .gitignore  AGENTS.md  MEMORY.md  README.md  docker-compose.yml  pyrightconfig.json  vercel.json
.github/workflows/: ci-cd.yml
Backend/: .dockerignore  .env.example  Dockerfile  _check_columns.py  alembic.ini  check_redis.py  diagnostic_db.py  pyproject.toml  requirements.txt  run_precompute.py  start.ps1
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_add_oauth_provider_columns.py  0002_create_catalog_tables.py  0003_add_catalog_indexes.py  0004_massive_catalog_indexes.py  0005_consent_tracking.py  0006_genre_cover_columns.py  __init__.py
Backend/app/: __init__.py  main.py
Backend/app/application/interfaces/: repositories.py
Backend/app/application/services/: auth_service.py  history_service.py  playlist_service.py  track_service.py  user_service.py
Backend/app/core/: cache.py  cache_keys.py  config.py  dependencies.py  exceptions.py  redis.py  security.py
Backend/app/domain/: entities.py  enums.py
Backend/app/infrastructure/: database.py
Backend/app/infrastructure/models/: __init__.py  base.py  catalog.py  playlist.py  token_blacklist.py  track.py  user.py
Backend/app/infrastructure/repositories/: __init__.py  base.py  catalog_repository.py  playlist_repository.py  token_blacklist_repository.py  track_repository.py  user_repository.py
Backend/app/middleware/: auth_middleware.py  metrics_middleware.py  rate_limit.py
Backend/app/presentation/: router.py
Backend/app/presentation/routes/: auth_routes.py  catalog_routes.py  metrics_routes.py  music_routes.py  player.py  playlist_routes.py  track_routes.py  user_routes.py
Backend/app/presentation/schemas/: __init__.py  auth.py  catalog.py  playlist.py  track.py  user.py
Backend/app/services/: email_service.py  email_templates.py  metrics.py
Backend/app/services/catalog/: __init__.py  cache_service.py  dedup.py  expansion.py  ingestion.py  massive_seed.py  precomputation.py  search_engine.py  seed_data.py  sync_scheduler.py  sync_tasks.py
Backend/app/services/music/: __init__.py  aggregator.py  ratelimit.py  schemas.py
Backend/app/services/music/clients/: __init__.py  genius.py  itunes.py  lastfm.py  musicbrainz.py  spotify.py
Backend/scripts/: catalog_seed.py  catalog_seed_massive.py  catalog_seed_small.py  clean_dirty_genres.py  diagnose_catalog_volume.py  diagnose_dirty_genres.py  ingest_brazilian.py  mark_brazilian_artists.py
Backend/scripts/backups/: dirty_genres_20260620_041227.json
Backend/tests/: __init__.py  conftest.py  test_health.py
Front-end/: package-lock.json
Front-end/UISaaS/: .env.production  AUTH_CHANGES.md  eslint.config.js  middleware.ts  next.config.tauri.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
Front-end/UISaaS/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
Front-end/UISaaS/components/: CatalogPrefetcher.tsx  GenreMosaic.tsx  NowPlayingContent.tsx  SleepTimerRestore.tsx  ThemeRestore.tsx
Front-end/UISaaS/hooks/: useCatalog.ts  useDeferredImport.tsx  useDesktopAudioEngine.ts  useGenreFilter.ts  useGooglePicker.ts  useGoogleScripts.ts  usePreviewPlayer.ts  useToast.ts  useTranslation.ts
Front-end/UISaaS/lib/: albumQueue.ts  api.ts  catalogCache.ts  desktopApi.ts  genre-image-map.ts  mockData.ts  (+4 more)
Front-end/UISaaS/src-tauri/: Cargo.toml  tauri.conf.json
Front-end/UISaaS/src-tauri/capabilities/: default.json
Front-end/UISaaS/src-tauri/src/: lib.rs
Front-end/clarkplayer/: next.config.ts  package-lock.json  package.json
(+99 files in other folders)
