[project]
name = "clarkplayer-backend"
version = "0.1.0"
description = "Backend API for ClarkPlayer — an audio player and library manager."
authors = [
    { name = "ClarkPlayer Team" }
]
license = "MIT"
requires-python = ">=3.11,<3.15"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = true
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = ">=0.135.0"
uvicorn = { version = ">=0.42.0", extras = ["standard"] }
sqlalchemy = { version = ">=2.0.48", extras = ["asyncio"] }
asyncpg = ">=0.31.0"
alembic = ">=1.18.0"
authlib = ">=1.7.0"
passlib = { version = ">=1.7.4", extras = ["bcrypt"] }
joserfc = ">=1.0.0"
redis = { version = "5.0.4", extras = ["hiredis"] }
hiredis = "2.3.2"
python-multipart = ">=0.0.28"
aiofiles = ">=25.1.0"
python-dotenv = ">=1.2.0"
pydantic = { version = ">=2.12.0", extras = ["email"] }
resend = ">=2.2.0"
httpx = ">=0.28.0"
beautifulsoup4 = ">=4.12.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-asyncio = ">=0.25.0"
pytest-cov = ">=6.0.0"
httpx = ">=0.28.0"
ruff = ">=0.11.0"
mypy = ">=1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["alembic/"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
